Fixed results page on mobile

--- a/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_results.scss
+++ b/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_results.scss
@@ -67,17 +67,26 @@
 }
 
 .app-long-results {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+
   margin-bottom: 0;
 
   li {
-    flex: 0 1 33%;
-    border-right: 1px solid $govuk-border-colour;
-    &:last-child,
-    &:nth-child(3n) {
-      border: 0;
+    margin-bottom: govuk-spacing(3);
+  }
+
+  @include govuk-media-query($from: desktop) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    li {
+      flex: 0 1 33%;
+      border-right: 1px solid $govuk-border-colour;
+      margin-bottom: 0;
+      &:last-child,
+      &:nth-child(3n) {
+        border: 0;
+      }
     }
   }
 
@@ -94,7 +103,7 @@
     .govuk-heading-s {
       border-bottom: 1px solid $govuk-border-colour;
       font-weight: normal;
-      @include govuk-responsive-padding(1, "bottom");
+      @include govuk-responsive-padding(1, 'bottom');
     }
 
     .app-results__cta {
@@ -102,7 +111,7 @@
     }
 
     .result-detail {
-      clear: both;
+      @extend %clearfix;
     }
 
     .result-meta {
